--- a/client.css
+++ b/client.css
@@ -76,3 +76,8 @@ ul{padding-left:0.5em;
   color:lightpink;
   font-size:0.7em;
 }
+.rename {
+  margin:0.5em;
+  color:lightpink;
+  font-size:0.7em;
+}
