--- a/client.css
+++ b/client.css
@@ -13,7 +13,7 @@ body {margin:0em}
 .message {
    background-color;
   margin:0em;
-  padding:0.5em;
+  padding:0em;
   padding-bottom:10em;
 }
 .talker{
@@ -58,8 +58,10 @@ button {
     margin:0.1em;
   border:1px solid lightgrey;
   border-radius:0.2em;
-  padding:0.4em;
-  background-color: lightblue;
+  padding:0.1em;
+  background-color: transparent;
+    color:blueviolet;
+  text-align:left;
 }
 input {
   margin:1em;
@@ -80,4 +82,58 @@ ul{padding-left:0.5em;
   margin:0.5em;
   color:lightpink;
   font-size:0.7em;
+}
+.room { 
+  margin:0.5em;
+  color:lightpink;
+  font-size:0.7em;
+  width:4em;
+  display: inline-block
+  
+}
+.room-header{
+   background-color: gray;
+   padding:0.5em;
+   font-size: 1.5em;
+  color:white;
+  
+}
+.room-title{
+  
+}
+
+.room-header button{
+   margin-left:1em;
+  margin-bottom:0em;
+}
+.room-control{
+  padding:1em;
+  background-color: white;
+}
+.rooms button{
+  width:10em;
+  
+}
+.rooms li{
+  background-color: transparent;
+}
+.rooms-bg{
+  background-color: white;
+
+  
+}
+.room-control span{
+  width:5em;
+  display: inline-block;
+}
+.room-control input{
+  margin: 0em;
+}
+.rooms-switch{
+  position:fixed;
+  right:0.5em;
+  top:0.3em;
+}
+.rooms-switch button{
+  color:white;
 }
